--- a/src/components/Spinner/spinner.module.css
+++ b/src/components/Spinner/spinner.module.css
@@ -11,7 +11,37 @@
 .Spinner {
   display: inline-block;
   position: relative;
+  top: 50;
+  left: 50;
 }
+
+.Wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  position: fixed;
+  bottom: 50%;
+}
+
+.Message {
+  text-align: center;
+  margin-bottom: 10%;
+  font-size: 2em;
+}
+
+.ColorDefault {
+  color: #fff;
+}
+
+.Color1 {
+  color: #ff00ff;
+}
+
+.Color2 {
+  color: #00ffff;
+}
+
 .Spinner:after {
   content: " ";
   display: block;
